--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,12 +41,12 @@
   --color-brand-25: #f2f7ff;
   --color-brand-50: #ecf3ff;
   --color-brand-100: #dde9ff;
-  --color-brand-200: #B3A2F5;
-  --color-brand-300: #9cb9ff;
-  --color-brand-400: #7592ff;
-  --color-brand-500: #5932EA;
-  --color-brand-600: #3641f5;
-  --color-brand-700: #2a31d8;
+  --color-brand-200: #E9CDFE;
+  --color-brand-300: #CF90FD;
+  --color-brand-400: #BD65FC;
+  --color-brand-500: #9810FA;
+  --color-brand-600: #870EDE;
+  --color-brand-700: #5B039A;
   --color-brand-800: #252dae;
   --color-brand-900: #262e89;
   --color-brand-950: #1F0B6B;
